k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freeflix
  labels:
    app.kubernetes.io/name: freeflix
