k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freeflix
  namespace: freeflix
  labels:
    app.kubernetes.io/name: freeflix
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: freeflix
